--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express": "^4.18.2",
     "mongoose": "^8.2.0",
     "nodemon": "^3.1.0",
+    "path": "^0.12.7",
     "three": "^0.161.0"
   }
 }
